--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 	<!-- main -->
 	<section id="home">
 		<div class="bg-video-wrap">
-		    <video src="images/movie.mp4" loop muted autoplay>
+<!-- 		    <video src="images/movie.mp4" loop muted autoplay> -->
+		    <video src="images/movie.mp4" autoplay muted　playsinline　loop>
 		    </video>
 		    <h1><img src="images/white-logo-cutout.png" alt=""></h1>
 		    <p>〜　ホームページに情熱を　〜</p>
